@@ -3,7 +3,7 @@
 <div class="main">
     <div class="content">
 	<ul>
-	    <li>Thank you for choosing Kubuntu 9.10, the Karmic Koala!</li>
+	    <li>Thank you for choosing Kubuntu 10.04, the Karmic Koala!</li>
 	    <li>Kubuntu is based on Ubuntu and features the K Desktop Environment (KDE).</li>
 	    <li>Kubuntu is released biannually with at least 18 months of free security updates.</li>
 	    <li>While Kubuntu is installing, we invite you to explore your new operating system.</li>
