@@ -13,6 +13,9 @@ ubiquity-slideshow-ubuntu (13) UNRELEASED; urgency=low
   [ Lionel Le Folgoc ]
   * Initial import of Xubuntu slides lp: #514011
 
+  [ Evan Dandrea ]
+  * Bump release in welcome.html to 10.04.
+
  -- Dylan McCall <dylan@dylan-laptop>  Tue, 02 Feb 2010 13:09:28 -0800
 
 ubiquity-slideshow-ubuntu (12) lucid; urgency=low
